--- a/.github/workflows/build-nginx-ech.yml
+++ b/.github/workflows/build-nginx-ech.yml
@@ -305,7 +305,7 @@ jobs:
           git config user.name "CI Merge"
           git config user.email "ci@example.invalid"
           for c in $COMMITS; do
-            git cherry-pick "$c"
+            git cherry-pick -X theirs "$c"
           done
 
           cd "$BUILD_ROOT/ngx_brotli"
@@ -416,7 +416,7 @@ jobs:
           git config user.name "CI Merge"
           git config user.email "ci@example.invalid"
           for c in $COMMITS; do
-            git cherry-pick "$c"
+            git cherry-pick -X theirs "$c"
           done
 
           ./Configure linux-aarch64 \
