--- a/.github/workflows/build-nginx-ech.yml
+++ b/.github/workflows/build-nginx-ech.yml
@@ -622,8 +622,11 @@ jobs:
 
           "$OPENSSL_BIN" list -commands | grep -i ech
           "$OPENSSL_BIN" help ech
-          "$OPENSSL_BIN" genpkey -algorithm X25519 -out test-ech/ech.key
-          "$OPENSSL_BIN" ech -public_name outer.example.test -key test-ech/ech.key -out test-ech/echconfig.bin -out_b64 test-ech/echconfig.b64
+          "$OPENSSL_BIN" ech -public_name outer.example.test -out test-ech/echconfig.pem
+          awk 'BEGIN{in=0} /BEGIN PRIVATE KEY/{in=1} in{print} /END PRIVATE KEY/{in=0}' \
+            test-ech/echconfig.pem > test-ech/ech.key
+          awk 'BEGIN{in=0} /BEGIN ECH/{in=1; next} /END ECH/{in=0} in{print}' \
+            test-ech/echconfig.pem | tr -d '\n' > test-ech/echconfig.b64
       - name: Run ECH smoke tests
         run: |
           set -euxo pipefail
