--- a/.github/workflows/build-nginx-ech.yml
+++ b/.github/workflows/build-nginx-ech.yml
@@ -623,10 +623,9 @@ jobs:
           "$OPENSSL_BIN" list -commands | grep -i ech
           "$OPENSSL_BIN" help ech
           "$OPENSSL_BIN" ech -public_name outer.example.test -out test-ech/echconfig.pem
-          awk 'BEGIN{in_block=0} /BEGIN PRIVATE KEY/{in_block=1} in_block{print} /END PRIVATE KEY/{in_block=0}' \
-            test-ech/echconfig.pem > test-ech/ech.key
           awk 'BEGIN{in_block=0} /BEGIN ECH/{in_block=1; next} /END ECH/{in_block=0} in_block{print}' \
             test-ech/echconfig.pem | tr -d '\n' > test-ech/echconfig.b64
+          base64 -d test-ech/echconfig.b64 > test-ech/echconfig.bin
       - name: Run ECH smoke tests
         run: |
           set -euxo pipefail
