--- a/conf/snippets/server_defaults.conf
+++ b/conf/snippets/server_defaults.conf
@@ -1,8 +1,7 @@
-listen 127.0.0.1:8443 ssl http2;
+listen 127.0.0.1:8443 ssl;
 listen 127.0.0.1:8443 quic reuseport;
 
+http2 on;
 http3 on;
 
-ssl_ech on;
-ssl_ech_config test-ech/echconfig.b64;
-ssl_ech_key test-ech/ech.key;
+ssl_ech_file test-ech/echconfig.pem;
