--- a/.github/workflows/build-nginx-ech.yml
+++ b/.github/workflows/build-nginx-ech.yml
@@ -590,9 +590,13 @@ jobs:
       - name: Generate certs and ECH config
         run: |
           set -euxo pipefail
-          mkdir -p test-certs test-ech logs
+          mkdir -p conf/test-certs conf/test-ech logs
+          ln -sfn conf/test-certs test-certs
+          ln -sfn conf/test-ech test-ech
 
           OPENSSL_BIN="$PWD/test-openssl/bin/openssl"
+          CERT_DIR="$PWD/conf/test-certs"
+          ECH_DIR="$PWD/conf/test-ech"
           export LD_LIBRARY_PATH="$PWD/test-openssl/lib"
           export OPENSSL_CONF="$PWD/test-openssl/ssl/openssl.cnf"
           mkdir -p "$PWD/test-openssl/ssl"
@@ -609,27 +613,29 @@ jobs:
           activate = 1
           EOF
 
-          "$OPENSSL_BIN" genpkey -algorithm EC -pkeyopt ec_paramgen_curve:P-256 -out test-certs/ca.key
-          "$OPENSSL_BIN" req -x509 -new -key test-certs/ca.key -sha256 -days 30 -subj "/CN=Test CA" -out test-certs/ca.crt
+          "$OPENSSL_BIN" genpkey -algorithm EC -pkeyopt ec_paramgen_curve:P-256 -out "$CERT_DIR/ca.key"
+          "$OPENSSL_BIN" req -x509 -new -key "$CERT_DIR/ca.key" -sha256 -days 30 -subj "/CN=Test CA" -out "$CERT_DIR/ca.crt"
 
           for DOMAIN in outer.example.test this.doesnt.exist whats.going.on bananas.arent.real blue.seaglass; do
             NAME=$(printf "%s" "$DOMAIN" | tr '.' '_')
-            "$OPENSSL_BIN" genpkey -algorithm EC -pkeyopt ec_paramgen_curve:P-256 -out "test-certs/${NAME}.key"
-            printf 'subjectAltName=DNS:%s\n' "$DOMAIN" > test-certs/san.cnf
-            "$OPENSSL_BIN" req -new -key "test-certs/${NAME}.key" -subj "/CN=${DOMAIN}" -out "test-certs/${NAME}.csr"
-            "$OPENSSL_BIN" x509 -req -in "test-certs/${NAME}.csr" -CA test-certs/ca.crt -CAkey test-certs/ca.key -CAcreateserial -days 30 -sha256 -extfile test-certs/san.cnf -out "test-certs/${NAME}.crt"
+            "$OPENSSL_BIN" genpkey -algorithm EC -pkeyopt ec_paramgen_curve:P-256 -out "$CERT_DIR/${NAME}.key"
+            printf 'subjectAltName=DNS:%s\n' "$DOMAIN" > "$CERT_DIR/san.cnf"
+            "$OPENSSL_BIN" req -new -key "$CERT_DIR/${NAME}.key" -subj "/CN=${DOMAIN}" -out "$CERT_DIR/${NAME}.csr"
+            "$OPENSSL_BIN" x509 -req -in "$CERT_DIR/${NAME}.csr" -CA "$CERT_DIR/ca.crt" -CAkey "$CERT_DIR/ca.key" -CAcreateserial -days 30 -sha256 -extfile "$CERT_DIR/san.cnf" -out "$CERT_DIR/${NAME}.crt"
           done
 
           "$OPENSSL_BIN" list -commands | grep -i ech
           "$OPENSSL_BIN" help ech
-          "$OPENSSL_BIN" ech -public_name outer.example.test -out test-ech/echconfig.pem
+          "$OPENSSL_BIN" ech -public_name outer.example.test -out "$ECH_DIR/echconfig.pem"
           awk 'BEGIN{in_block=0} /BEGIN ECH/{in_block=1; next} /END ECH/{in_block=0} in_block{print}' \
-            test-ech/echconfig.pem | tr -d '\n' > test-ech/echconfig.b64
-          base64 -d test-ech/echconfig.b64 > test-ech/echconfig.bin
+            "$ECH_DIR/echconfig.pem" | tr -d '\n' > "$ECH_DIR/echconfig.b64"
+          base64 -d "$ECH_DIR/echconfig.b64" > "$ECH_DIR/echconfig.bin"
       - name: Run ECH smoke tests
         run: |
           set -euxo pipefail
           OPENSSL_BIN="$PWD/test-openssl/bin/openssl"
+          CERT_DIR="$PWD/conf/test-certs"
+          ECH_DIR="$PWD/conf/test-ech"
           export LD_LIBRARY_PATH="$PWD/test-openssl/lib"
 
           ./opt/nginx-ech/sbin/nginx -p "$PWD" -c conf/nginx.conf -t
@@ -643,8 +649,8 @@ jobs:
                 LD_LIBRARY_PATH="$PWD/test-openssl/lib" "$OPENSSL_BIN" s_client \
                   -connect 127.0.0.1:8443 \
                   -servername "$DOMAIN" \
-                  -CAfile "$PWD/test-certs/ca.crt" \
-                  -ech_config "$PWD/test-ech/echconfig.bin" \
+                  -CAfile "$CERT_DIR/ca.crt" \
+                  -ech_config "$ECH_DIR/echconfig.bin" \
                   -quiet
             )
             echo "$RESPONSE" | grep -q "$DOMAIN"
