--- a/.github/workflows/build-nginx-ech.yml
+++ b/.github/workflows/build-nginx-ech.yml
@@ -6,6 +6,8 @@ on:
       - main
       - develop
       - release
+    tags:
+      - "r*"
   workflow_dispatch:
     inputs:
       skip_builds:
@@ -14,6 +16,10 @@ on:
         default: false
       artifact_run_id:
         description: "Run ID to download artifacts from (optional)."
+        type: string
+        default: ""
+      artifact_release_tag:
+        description: "Release tag to download artifacts from (optional)."
         type: string
         default: ""
 
@@ -40,6 +46,9 @@ env:
   APT_PACKAGES_OPENSSL: "build-essential ca-certificates ccache git perl"
   APT_PACKAGES_TEST: "binutils"
   APT_PACKAGES_ALL: "build-essential ca-certificates ccache cmake git ninja-build perl pkg-config binutils"
+
+permissions:
+  contents: write
 
 jobs:
   init:
@@ -421,6 +430,12 @@ jobs:
         with:
           name: nginx-ech-arm64
           path: ${{ steps.package.outputs.tar_path }}
+      - name: Upload nginx release asset
+        if: startsWith(github.ref, 'refs/tags/r')
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ github.ref_name }}
+          files: ${{ steps.package.outputs.tar_path }}
       - name: Decide whether to save ccache
         if: always()
         id: ccache
@@ -557,6 +572,12 @@ jobs:
         with:
           name: openssl-cli
           path: ${{ steps.package.outputs.tar_path }}
+      - name: Upload OpenSSL release asset
+        if: startsWith(github.ref, 'refs/tags/r')
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ github.ref_name }}
+          files: ${{ steps.package.outputs.tar_path }}
 
   test-ech:
     needs:
@@ -590,13 +611,24 @@ jobs:
       - name: Validate artifact source
         if: >-
           ${{ github.event_name == 'workflow_dispatch' &&
-              github.event.inputs.skip_builds == 'true' &&
-              github.event.inputs.artifact_run_id == '' }}
+              github.event.inputs.skip_builds == 'true' }}
         run: |
-          echo "artifact_run_id is required when skip_builds=true."
-          exit 1
+          set -euxo pipefail
+          RUN_ID="${{ github.event.inputs.artifact_run_id }}"
+          RELEASE_TAG="${{ github.event.inputs.artifact_release_tag }}"
+          if [ -z "$RUN_ID" ] && [ -z "$RELEASE_TAG" ]; then
+            echo "artifact_run_id or artifact_release_tag is required when skip_builds=true."
+            exit 1
+          fi
+          if [ -n "$RUN_ID" ] && [ -n "$RELEASE_TAG" ]; then
+            echo "Specify only one of artifact_run_id or artifact_release_tag."
+            exit 1
+          fi
       - name: Download nginx artifact (current run)
-        if: ${{ github.event_name != 'workflow_dispatch' || github.event.inputs.artifact_run_id == '' }}
+        if: >-
+          ${{ github.event_name != 'workflow_dispatch' ||
+              (github.event.inputs.artifact_run_id == '' &&
+               github.event.inputs.artifact_release_tag == '') }}
         uses: actions/download-artifact@v4
         with:
           name: nginx-ech-arm64
@@ -607,8 +639,56 @@ jobs:
           name: nginx-ech-arm64
           repository: ${{ github.repository }}
           run-id: ${{ github.event.inputs.artifact_run_id }}
+      - name: Download artifacts (from release)
+        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.artifact_release_tag != '' }}
+        env:
+          RELEASE_TAG: ${{ github.event.inputs.artifact_release_tag }}
+          NGINX_ASSET: nginx-${{ env.NGINX_VERSION }}-ech-linux-arm64.tar.gz
+          OPENSSL_ASSET: openssl-cli.tar.gz
+        run: |
+          set -euxo pipefail
+          python - <<'PY'
+          import json
+          import os
+          import sys
+          import urllib.request
+
+          def api_get(url: str, accept: str) -> bytes:
+              token = os.environ["GITHUB_TOKEN"]
+              headers = {
+                  "Accept": accept,
+                  "Authorization": f"Bearer {token}",
+                  "X-GitHub-Api-Version": "2022-11-28",
+              }
+              req = urllib.request.Request(url, headers=headers)
+              with urllib.request.urlopen(req) as resp:
+                  return resp.read()
+
+          repo = os.environ["GITHUB_REPOSITORY"]
+          tag = os.environ["RELEASE_TAG"]
+          nginx_asset = os.environ["NGINX_ASSET"]
+          openssl_asset = os.environ["OPENSSL_ASSET"]
+
+          release_url = f"https://api.github.com/repos/{repo}/releases/tags/{tag}"
+          release = json.loads(api_get(release_url, "application/vnd.github+json"))
+          assets = {asset["name"]: asset["id"] for asset in release.get("assets", [])}
+          required = [nginx_asset, openssl_asset]
+          missing = [name for name in required if name not in assets]
+          if missing:
+              sys.exit(f"Missing release assets: {', '.join(missing)}")
+
+          for name in required:
+              asset_id = assets[name]
+              asset_url = f"https://api.github.com/repos/{repo}/releases/assets/{asset_id}"
+              data = api_get(asset_url, "application/octet-stream")
+              with open(name, "wb") as handle:
+                  handle.write(data)
+          PY
       - name: Download OpenSSL CLI artifact (current run)
-        if: ${{ github.event_name != 'workflow_dispatch' || github.event.inputs.artifact_run_id == '' }}
+        if: >-
+          ${{ github.event_name != 'workflow_dispatch' ||
+              (github.event.inputs.artifact_run_id == '' &&
+               github.event.inputs.artifact_release_tag == '') }}
         uses: actions/download-artifact@v4
         with:
           name: openssl-cli
