--- a/.github/workflows/build-nginx-ech.yml
+++ b/.github/workflows/build-nginx-ech.yml
@@ -99,7 +99,9 @@ jobs:
   cache-nginx:
     needs: init
     runs-on: ubuntu-24.04
-    if: ${{ github.event_name != 'workflow_dispatch' || github.event.inputs.skip_builds != 'true' }}
+    if: >-
+      ${{ github.ref != 'refs/heads/ci/test-only' &&
+          (github.event_name != 'workflow_dispatch' || github.event.inputs.skip_builds != 'true') }}
     steps:
       - name: Restore nginx cache
         uses: actions/cache/restore@v4
@@ -132,7 +134,9 @@ jobs:
   cache-pcre2:
     needs: init
     runs-on: ubuntu-24.04
-    if: ${{ github.event_name != 'workflow_dispatch' || github.event.inputs.skip_builds != 'true' }}
+    if: >-
+      ${{ github.ref != 'refs/heads/ci/test-only' &&
+          (github.event_name != 'workflow_dispatch' || github.event.inputs.skip_builds != 'true') }}
     steps:
       - name: Restore PCRE2 cache
         uses: actions/cache/restore@v4
@@ -163,7 +167,9 @@ jobs:
   cache-zlib:
     needs: init
     runs-on: ubuntu-24.04
-    if: ${{ github.event_name != 'workflow_dispatch' || github.event.inputs.skip_builds != 'true' }}
+    if: >-
+      ${{ github.ref != 'refs/heads/ci/test-only' &&
+          (github.event_name != 'workflow_dispatch' || github.event.inputs.skip_builds != 'true') }}
     steps:
       - name: Restore zlib cache
         uses: actions/cache/restore@v4
@@ -196,7 +202,9 @@ jobs:
   cache-openssl:
     needs: init
     runs-on: ubuntu-24.04
-    if: ${{ github.event_name != 'workflow_dispatch' || github.event.inputs.skip_builds != 'true' }}
+    if: >-
+      ${{ github.ref != 'refs/heads/ci/test-only' &&
+          (github.event_name != 'workflow_dispatch' || github.event.inputs.skip_builds != 'true') }}
     steps:
       - name: Restore OpenSSL cache
         uses: actions/cache/restore@v4
@@ -239,7 +247,9 @@ jobs:
   cache-ngx-brotli:
     needs: init
     runs-on: ubuntu-24.04
-    if: ${{ github.event_name != 'workflow_dispatch' || github.event.inputs.skip_builds != 'true' }}
+    if: >-
+      ${{ github.ref != 'refs/heads/ci/test-only' &&
+          (github.event_name != 'workflow_dispatch' || github.event.inputs.skip_builds != 'true') }}
     steps:
       - name: Restore ngx_brotli cache
         uses: actions/cache/restore@v4
@@ -281,7 +291,9 @@ jobs:
       - cache-openssl
       - cache-ngx-brotli
     runs-on: ubuntu-24.04-arm
-    if: ${{ github.event_name != 'workflow_dispatch' || github.event.inputs.skip_builds != 'true' }}
+    if: >-
+      ${{ github.ref != 'refs/heads/ci/test-only' &&
+          (github.event_name != 'workflow_dispatch' || github.event.inputs.skip_builds != 'true') }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -468,7 +480,9 @@ jobs:
       - cache-apt
       - cache-openssl
     runs-on: ubuntu-24.04-arm
-    if: ${{ github.event_name != 'workflow_dispatch' || github.event.inputs.skip_builds != 'true' }}
+    if: >-
+      ${{ github.ref != 'refs/heads/ci/test-only' &&
+          (github.event_name != 'workflow_dispatch' || github.event.inputs.skip_builds != 'true') }}
     steps:
       - name: Prepare apt cache dir
         run: |
@@ -628,7 +642,8 @@ jobs:
         if: >-
           ${{ github.event_name != 'workflow_dispatch' ||
               (github.event.inputs.artifact_run_id == '' &&
-               github.event.inputs.artifact_release_tag == '') }}
+               github.event.inputs.artifact_release_tag == '') &&
+              github.ref != 'refs/heads/ci/test-only' }}
         uses: actions/download-artifact@v4
         with:
           name: nginx-ech-arm64
@@ -688,7 +703,8 @@ jobs:
         if: >-
           ${{ github.event_name != 'workflow_dispatch' ||
               (github.event.inputs.artifact_run_id == '' &&
-               github.event.inputs.artifact_release_tag == '') }}
+               github.event.inputs.artifact_release_tag == '') &&
+              github.ref != 'refs/heads/ci/test-only' }}
         uses: actions/download-artifact@v4
         with:
           name: openssl-cli
@@ -699,6 +715,54 @@ jobs:
           name: openssl-cli
           repository: ${{ github.repository }}
           run-id: ${{ github.event.inputs.artifact_run_id }}
+      - name: Download artifacts (from latest release)
+        if: ${{ github.ref == 'refs/heads/ci/test-only' }}
+        env:
+          OPENSSL_ASSET: openssl-cli.tar.gz
+        run: |
+          set -euxo pipefail
+          python - <<'PY'
+          import json
+          import os
+          import sys
+          import urllib.request
+
+          def api_get(url: str, accept: str) -> bytes:
+              token = os.environ["GITHUB_TOKEN"]
+              headers = {
+                  "Accept": accept,
+                  "Authorization": f"Bearer {token}",
+                  "X-GitHub-Api-Version": "2022-11-28",
+              }
+              req = urllib.request.Request(url, headers=headers)
+              with urllib.request.urlopen(req) as resp:
+                  return resp.read()
+
+          repo = os.environ["GITHUB_REPOSITORY"]
+          openssl_asset = os.environ["OPENSSL_ASSET"]
+          release_url = f"https://api.github.com/repos/{repo}/releases/latest"
+          release = json.loads(api_get(release_url, "application/vnd.github+json"))
+          assets = {asset["name"]: asset["id"] for asset in release.get("assets", [])}
+          if openssl_asset not in assets:
+              sys.exit(f"Missing release asset: {openssl_asset}")
+
+          nginx_assets = [
+              name for name in assets
+              if name.startswith("nginx-") and name.endswith("-ech-linux-arm64.tar.gz")
+          ]
+          if len(nginx_assets) != 1:
+              sys.exit(
+                  f"Expected exactly one nginx asset, found: {', '.join(nginx_assets)}"
+              )
+
+          required = [nginx_assets[0], openssl_asset]
+          for name in required:
+              asset_id = assets[name]
+              asset_url = f"https://api.github.com/repos/{repo}/releases/assets/{asset_id}"
+              data = api_get(asset_url, "application/octet-stream")
+              with open(name, "wb") as handle:
+                  handle.write(data)
+          PY
       - name: Extract artifacts
         run: |
           set -euxo pipefail
@@ -760,6 +824,8 @@ jobs:
           CERT_DIR="$PWD/conf/test-certs"
           ECH_DIR="$PWD/conf/test-ech"
           export LD_LIBRARY_PATH="$PWD/test-openssl/lib"
+
+          "$OPENSSL_BIN" s_client -help
 
           ./opt/nginx-ech/sbin/nginx -p "$PWD" -c conf/nginx.conf -t
           ./opt/nginx-ech/sbin/nginx -p "$PWD" -c conf/nginx.conf -g 'daemon off;' &
