--- a/.github/workflows/build-nginx-ech.yml
+++ b/.github/workflows/build-nginx-ech.yml
@@ -837,16 +837,27 @@ jobs:
           sleep 1
 
           for DOMAIN in this.doesnt.exist whats.going.on bananas.arent.real blue.seaglass; do
-            RESPONSE=$(
-              printf 'GET / HTTP/1.1\r\nHost: %s\r\nConnection: close\r\n\r\n' "$DOMAIN" | \
-                LD_LIBRARY_PATH="$PWD/test-openssl/lib" "$OPENSSL_BIN" s_client \
-                  -connect 127.0.0.1:8443 \
-                  -servername "$DOMAIN" \
-                  -CAfile "$CERT_DIR/ca.crt" \
-                  -ech_config_list "$ECH_CONFIG_LIST" \
-                  -quiet
-            )
-            echo "$RESPONSE" | grep -q "$DOMAIN"
+            RESPONSE_RAW="response-${DOMAIN}.raw"
+            RESPONSE_BODY="response-${DOMAIN}.txt"
+            EXPECTED_BODY="expected-${DOMAIN}.txt"
+            TRACE_LOG="trace-${DOMAIN}.log"
+
+            printf 'GET / HTTP/1.1\r\nHost: %s\r\nConnection: close\r\n\r\n' "$DOMAIN" | \
+              LD_LIBRARY_PATH="$PWD/test-openssl/lib" "$OPENSSL_BIN" s_client \
+                -connect 127.0.0.1:8443 \
+                -servername "$DOMAIN" \
+                -CAfile "$CERT_DIR/ca.crt" \
+                -ech_config_list "$ECH_CONFIG_LIST" \
+                -ech_outer_sni outer.example.test \
+                -msg \
+                -quiet \
+                >"$RESPONSE_RAW" 2>"$TRACE_LOG"
+
+            awk 'BEGIN{body=0} /^\r?$/{body=1; next} {if(body) print}' \
+              "$RESPONSE_RAW" >"$RESPONSE_BODY"
+            printf "%s\n" "$DOMAIN" >"$EXPECTED_BODY"
+            diff -u "$EXPECTED_BODY" "$RESPONSE_BODY"
+            grep -q "encrypted_client_hello" "$TRACE_LOG"
           done
 
           ./opt/nginx-ech/sbin/nginx -p "$PWD" -c conf/nginx.conf -s quit
